--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
     </div>
     
+    <!-- Body content, contains ids, images and text-->
+
     <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization">
@@ -42,24 +44,26 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="images/social-media-marketing.jpg" class="float-left" />
+            <img src="images/social-media-marketing.jpg" class="float-left" alt="social media marketing"/>
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
     </div>
+
+    <!--Content of sidebar, contains classes, images and text -->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="images/lead-generation.png" />
+            <img src="images/lead-generation.png" alt="Lead Generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="images/brand-awareness.png" />
+            <img src="images/brand-awareness.png" alt="Brand Awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -72,6 +76,8 @@
             </p>
         </div>
     </div>
+
+    <!--Content of footer, contains text and copyright -->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
